--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,10 @@
 
   <body>
     <%= render partial: "shared/navbar"%>
-    <div class='container'>
-    <%= yield %>
+
+    <div class="container"> 
+      <%= render partial: "shared/flash" %>
+      <%= yield %>
   </div>
   </body>
 </html>
